syntax = "proto3";

package book.v1;

import "google/api/annotations.proto";

option go_package = "github.com/k3forx/opentelemetry/grpc_gateway_distributed_system/proto/gen/book/v1;bookv1";

service BookService {
  rpc GetBook(GetBookRequest) returns (GetBookResponse) {
    option (google.api.http) = {
      get: "/v1/books/{id}"
    };
  }
}

message GetBookRequest {
  int64 id = 1;
}

message GetBookResponse {
  Book book = 1;
}

message Book {
  int64 id = 1;
  string title = 2;
  string author_name = 3;
} 
